# ISLESevaluation

./: AbsoluteVolumeErrorImageToImageMetric.h  AbsoluteVolumeErrorImageToImageMetric.txx  AbstractValidationMetric.h  AverageDistanceImageToImageMetric.h  AverageDistanceImageToImageMetric.txx  CMakeLists.txt  DiceOverlapImageToImageMetric.h  DiceOverlapImageToImageMetric.txx  HausdorffDistanceImageToImageMetric.h  HausdorffDistanceImageToImageMetric.txx  ImageToImageValidator.h  ImageToImageValidator.txx  PositivePredictiveValueImageToImageMetric.h  PositivePredictiveValueImageToImageMetric.txx  README.md  SensitivityImageToImageMetric.h  SensitivityImageToImageMetric.txx  validateLabelImages-ISLES.cxx
